Fix invisible connection icon

--- a/userChrome/UrlbarTweaks.css
+++ b/userChrome/UrlbarTweaks.css
@@ -12,8 +12,8 @@
  * Fix shifting of centered URL
  * Example - https://i.imgur.com/hCE0nQj.png 
  */
+#urlbar[pageproxystate="valid"]   > #identity-box.unknownIdentity:not(.mixedDisplayContent) > #connection-icon,
 #urlbar[pageproxystate="invalid"] > #identity-box > #connection-icon,
-#urlbar[pageproxystate="valid"]   > #identity-box.unknownIdentity > #connection-icon,
 #urlbar[pageproxystate="invalid"] > #page-action-buttons > #pageActionButton,
 #urlbar[pageproxystate="invalid"] > #page-action-buttons > #star-button-box {
   display: -moz-box !important; 
